fixed modal language img padding on small phones

--- a/Eportfolio/style.css
+++ b/Eportfolio/style.css
@@ -695,6 +695,6 @@ align-items: center;
       margin-bottom: 8px;
   }
   .modal__half{
-      padding: 40px;
+      padding: 20px;
   }
 }
